//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table member_project {
  id Int [pk, increment]
  user_id Int [not null]
  project_id Int [not null]
  role ProjectRole [not null, default: 'DEVELOPER']
  user users [not null]
  project projects [not null]
}

Table users {
  id Int [pk, increment]
  name String
  username String
  gh_username String
  email String [unique]
  emailVerified DateTime
  image String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  accounts accounts [not null]
  sessions sessions [not null]
  projectsOwned projects [not null]
  comments comments [not null]
  bugsReported bugs [not null]
  bugsAssigned bugs [not null]
  projects member_project [not null]
}

Table accounts {
  id Int [pk, increment]
  userId Int [not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refresh_token String
  refresh_token_expires_in Int
  access_token String
  expires_at Int
  token_type String
  scope String
  id_token String
  session_state String
  oauth_token_secret String
  oauth_token String
  user users [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table sessions {
  id String [pk]
  sessionToken String [unique, not null]
  userId Int [not null]
  expires DateTime [not null]
  user users [not null]
}

Table bugs {
  id Int [pk, increment]
  title String [not null]
  description String
  reporter_id Int [not null]
  developer_id Int [not null]
  project_id Int [not null]
  order_in_column Int [not null]
  status BugStatus [not null, default: 'NEW']
  priority BugPriority [not null, default: 'LOW']
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  reporter users [not null]
  developer users
  project projects [not null]
  comments comments [not null]
  column project_columns
  column_id Int
}

Table projects {
  id Int [pk, increment]
  name String [not null]
  description String
  slug String [unique, not null]
  owner_id Int [not null]
  owner users [not null]
  bugs bugs [not null]
  projectMembership member_project [not null]
  columns project_columns [not null]
  projectInvitation project_invitations [not null]
}

Table comments {
  id Int [pk, increment]
  body String [not null]
  user_id Int [not null]
  bug_id Int [not null]
  user users [not null]
  bug bugs [not null]
  created_at DateTime [default: `now()`, not null]
}

Table project_columns {
  id Int [pk, increment]
  name String [not null]
  project_id Int [not null]
  project projects [not null]
  bugs bugs [not null]
  order Int [not null, default: 1]
}

Table project_invitations {
  id Int [pk, increment]
  project projects [not null]
  email String [not null]
  url String [not null]
  expiration DateTime [not null]
  project_id Int [not null]
}

Enum BugStatus {
  NEW
  IN_PROGRESS
  RESOLVED
  CLOSED
}

Enum BugPriority {
  LOW
  MEDIUM
  HIGH
  URGENT
}

Enum ProjectRole {
  REPORTER
  DEVELOPER
  MANAGER
  OWNER
}

Ref: member_project.user_id > users.id

Ref: member_project.project_id > projects.id [delete: Cascade]

Ref: accounts.userId > users.id [delete: Cascade]

Ref: sessions.userId > users.id [delete: Cascade]

Ref: bugs.reporter_id > users.id

Ref: bugs.developer_id > users.id

Ref: bugs.project_id > projects.id [delete: Cascade]

Ref: bugs.column_id > project_columns.id

Ref: projects.owner_id > users.id

Ref: comments.user_id > users.id

Ref: comments.bug_id > bugs.id

Ref: project_columns.project_id > projects.id [delete: Cascade]

Ref: project_invitations.project_id > projects.id [delete: Cascade]